# k2core

./: README.md  pyproject.toml
docs/: extraction-baseline.md
src/k2core/: __init__.py  config.py  debug.py  face_detail.py  image_edit.py  memory.py  output.py  project.py  projector.py  regional_lora.py  regional_prompting.py  sampling.py  spatial_attention.py
src/k2core/assets/: __init__.py
src/k2core/backends/: __init__.py  comfy_krea.py
src/k2core/lora/: __init__.py  compatibility.py  library.py
src/k2core/model/: __init__.py  artifacts.py  manifests.py
src/k2core/regions/: __init__.py  geometry.py  layout.py
src/k2core/runtime/: __init__.py
src/k2core/worker/: __init__.py  protocol.py  runtime.py
src/k2core/workers/: __init__.py
tests/: test_accelerator.py  test_comfy_krea_backend.py  test_config.py  test_debug.py  test_face_detail.py  test_image_edit.py  test_lora_library.py  test_memory.py  test_memory_policies.py  test_model_artifacts.py  test_output.py  test_post_upscale.py  test_project.py  test_projector.py  test_projector_core.py  test_public_contracts.py  test_regional_lora.py  test_regional_prompting.py  test_regions.py  test_sampling.py
